--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(Page)
 export(Page2)
 export(calendar)
 export(classes)
+export(coursemap)
 export(ebookcard)
 export(lectureCard)
 export(pages)
