--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(Page)
 export(Page2)
 export(calendar)
 export(classMap_footer)
+export(classMap_smallBoard)
 export(classes)
 export(coursemap)
 export(ebookcard)
